turtleart.lessons.turtleart.Main.Polygon7.scala.error
Source:5: error: type mismatch;
 found   : (Int, Int)
 required: Double
	droite((360,0/7));
               ^